--- a/style.css
+++ b/style.css
@@ -1,246 +1,557 @@
-/* General Styles */
 * {
-  box-sizing: border-box;
+box-sizing: border-box;
 }
-
 body {
-  background-color: rgb(252, 232, 198);
-  margin: 0;
-  font-family: Arial, sans-serif;
+background-color: rgb(252, 232, 198);;
 }
-
 .header {
-  background-color: rgb(255, 207, 120);
-  display: flex;
-  justify-content: start;
-  padding: 10px;
+background-color: rgb(255, 207, 120);
+display: flex;
+justify-content: start;
 }
-
-.header_home, .header_news {
-  align-self: center;
-  margin-left: 20px;
+.header_home {
+align-self: center;
+margin-left: 75px;
 }
-
-.hide_home, .hide_news {
-  display: none;
+.header_news {
+align-self: center;
+margin-left: 75px;
 }
-
-.header_home:hover + .hide_home, .header_news:hover + .hide_news {
-  display: block;
-  color: black;
+.hide_home {
+display: none;
 }
-
-.hLinkAbout, .hLinkWrite {
-  position: absolute;
-  font-style: italic;
-  font-size: larger;
-  font-weight: bolder;
+.hide_news {
+display:none;
 }
-
+.header_home:hover + .hide_home {
+display: block;
+align-self: end;
+margin-left: -5%;
+margin-bottom: 1.3%;
+color: black;
+}
+.header_news:hover + .hide_news {
+display: block;
+align-self: end;
+margin-left: -5%;
+margin-bottom: 1.3%;
+color: black; 
+}
 .hLinkAbout {
-  margin-left: 80%;
+position:absolute;
+align-self: center;
+margin-left: 80%;
+font-style: italic;
+font-size: larger;
+font-weight: bolder;
 }
-
 .hLinkWrite {
-  margin-left: 90%;
+position:absolute;
+align-self: center;
+margin-left: 90%;
+font-style: italic;
+font-size: larger;
+font-weight: bolder;
 }
-
 h1 {
-  color: #000089;
-  font-family: "bahnschrift";
-  font-size: 2.5em;
-  margin-left: 20px;
+color: #000089;
+font-family: "bahnschrift";
+font-size: 40px;
+align-self: center;
+margin-left: 20px;
 }
-
 p {
-  font-family: "Times New Roman";
-  margin-left: 0;
+font-family: "Times New Roman";
+align-self: end;
+margin-left: -245px;
 }
-
-/* Contact Container */
 .contactContainer {
-  height: auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px;
+height: 70vh;
+display: flex;
+align-items: center;
+justify-content: space-evenly;
 }
-
-.contactLeft {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 20px;
+.contactLeft { 
+display: flex;
+flex-direction: column;
+align-items: start;
+gap: 20px;
 }
-
-.contactLeftTitle {
-  font-family: "bahnschrift";
-  font-weight: 600;
-  color: #000089;
-  font-size: 1.5em;
-  margin-bottom: 5px;
+.contactLeftTitle{
+font-family: "bahnschrift";
+font-weight: 600;
+color: #000089;
+font-size: 30px;
+margin-bottom: 5px;
 }
-
-.contactLeftTitle hr {
-  border: none;
-  width: 200px;
-  height: 5px;
-  background-color: #000089;
-  border-radius: 10px;
-  margin-bottom: 20px;
+.contactLeftTitle hr{
+border: none;
+width: 250px;
+height: 5px;
+background-color: #000089;
+border-radius: 10px;
+margin-bottom: 20px;
 }
-
-.contactInputs, .contactLeft textarea {
-  width: 90%;
-  max-width: 340px;
-  border: none;
-  outline: none;
-  padding-left: 25px;
-  font-weight: 500;
-  color: #666;
-  border-radius: 50px;
-}
-
 .contactInputs {
-  height: 50px;
+width: 340px;
+height:50px;
+border: none;
+outline: none;
+padding-left: 25px;
+font-weight: 500;
+color: #666;
+border-radius: 50px;
 }
-
-.contactLeft textarea {
-  height: 140px;
-  padding-top: 15px;
-  border-radius: 20px;
+.contactLeft textarea{
+height: 140px;
+padding-top: 15px;
+border-radius: 20px;
 }
-
-.contactInputs:hover, .contactInputs:focus {
-  border: 2px solid #000089;
+.contactInputs:hover {
+border: 2px solid #000089;
 }
-
+.contactInputs:focus {
+border: 2px solid #000089;
+}
 .contactInputs::placeholder {
-  color: #000089;
+color: #000089
 }
-
 .contactLeft button {
-  padding: 15px 30px;
-  font-size: 16px;
-  color: white;
-  gap: 10px;
-  border: none;
-  border-radius: 50px;
-  background: linear-gradient(90deg, #000089, dodgerBlue);
-  cursor: pointer;
+display: flex;
+align-items: center;
+margin-left: 120px;
+padding: 15px 30px;
+font-size: 16px;
+color: white;
+gap: 10px;
+border: none;
+border-radius: 50px;
+background: linear-gradient(90deg, #000089, dodgerBlue, dodgerBlue, #000089);
+cursor:pointer;
 }
-
-/* About Section */
 .about h1 {
-  color: #000089;
-  font-family: "bahnschrift";
-  font-size: 2.5em;
-  margin-left: 20px;
+color: #000089;
+font-family: "bahnschrift";
+font-size: 40px;
+margin-left: 20px;
 }
-
 .about hr {
-  margin-left: 20px;
-  margin-top: -18px;
-  background-color: #000089;
-  border-color: aliceblue;
-  border-width: 2px;
-  border-radius: 5px;
-  width: 185px;
-  height: 8px;
+margin-left: 20px;
+margin-top: -18px;
+background-color: #000089;
+border-color: aliceblue;
+border-width: 2px;
+border-radius: 5px;
+width: 185px;
+height: 8px;
 }
-
-/* News Tickers */
+.total {
+display: flex;
+flex-direction: row;
+justify-content: left;
+}
+.letters p {
+color: black;
+margin-left: 20px;
+font-weight: bold;
+font-family: "Lucida Handwriting";
+font-weight: bolder;
+}
+.words p {
+color: black;
+margin-left: 20px;
+font-weight: bold;
+font-family: "Lucida Handwriting";
+font-weight: bold;
+}
+.paragraphs {
+margin-left: 260px;
+margin-top: -10px;
+padding-right: 20px;
+font-family: "Times New Roman";
+font-size: 22px;
+text-align:  justify;
+}
+.creator {
+display: flex;
+flex-direction: column;
+background: lightgreen;
+}
+.creatorH1 h2{
+text-align: center;
+color: #000089;
+font-size: 25px;
+}
+.self {
+display: flex;
+justify-content: center;
+margin-top: 10px;
+border-radius: 10px;
+}
+.designation h4 {
+text-align: center;
+font-size: 20px;
+}
+.featured {
+display: flex;
+flex-wrap: wrap;
+justify-content: center;
+align-content: flex-start;
+margin-top: 15px;
+gap: 2em;
+}
+.news1 img{
+border-radius: 15px;
+}
+.news2 img{
+border-radius: 15px;
+}
+.news3 img{
+border-radius: 15px;
+}
+.news4 img{
+border-radius: 15px;
+}
+.news5 img{
+border-radius: 15px;
+}
+.news6 img{
+border-radius: 15px;
+}
+.news1 img:hover {
+width: 540px;
+height: 305px;
+}
+.news2 img:hover {
+width: 540px;
+height: 305px;
+}
+.news3 img:hover {
+width: 540px;
+height: 305px;
+}
+.news4 img:hover {
+width: 540px;
+height: 305px;
+}
+.news5 img:hover {
+width: 540px;
+height: 305px;
+}
+.news6 img:hover {
+width: 540px;
+height: 305px;
+}
+.headline {
+display: flex;
+flex-direction: column;
+align-items: center;
+}
+.head h1{
+text-align: center;
+}
+.image1 img{
+justify-self: center;
+}
+.by1 h6{
+justify-content: center;
+text-align: center;
+font-family: 'Times New Roman', Times, serif;
+font-size: 18px;
+font-weight: bold;
+}
+.p1 p{
+flex-direction: row;
+text-align: justify;
+font-family:'Times New Roman', Times, serif;
+font-size: 20px;
+margin-left: 45px;
+margin-right: 45px;
+}
+.featureDisplay {
+display: flex;
+flex-direction: column;
+}
+.featureBlock {
+display: block;
+background: red;
+margin-top: 15px;
+}
+.featureBlock h3 {
+color: yellow;
+font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+padding-left: 2%;
+font-size: 30px;
+font-weight: bolder;
+}
+.featureNews {
+display: flex;
+justify-content: space-between;
+}
+.featureImage {
+margin-top: 15px;
+border-radius: 20px;
+}
+.featureImage img {
+border-radius: 20px;
+}
+.featureImage img:hover {
+width: 729px;
+height: 417px;
+}
+.containerHome {
+position: relative;
+text-align: center;
+color: white;
+}
+.courtesyFeatured h2{
+position: absolute;
+bottom: -10px;
+left: 50%;
+transform: translate(-50%, -50%);
+font-family: Georgia, 'Times New Roman', Times, serif;
+font-size: 15px;
+}
+.container1List {
+position: relative;
+text-align: center;
+color: white;
+}
+.container2List {
+border-radius: 20px;
+position: relative;
+text-align: center;
+color: white;
+}
+.container3List {
+position: relative;
+text-align: center;
+color: white;
+}
+.container4List {
+position: relative;
+text-align: center;
+color: white;
+}
+.container5List {
+position: relative;
+text-align: center;
+color: white;
+}
+.container6List {
+position: relative;
+text-align: center;
+color: white;
+}
+.courtesy1List h2 {
+position: absolute;
+bottom: -10px;
+left: 50%;
+transform: translate(-50%, -50%);
+font-family: Georgia, 'Times New Roman', Times, serif;
+font-size: 15px;
+}
+.courtesy2List h2 {
+position: absolute;
+bottom: -10px;
+left: 50%;
+transform: translate(-50%, -50%);
+font-family: Georgia, 'Times New Roman', Times, serif;
+font-size: 15px;
+}
+.courtesy3List h2 {
+position: absolute;
+bottom: -10px;
+left: 50%;
+transform: translate(-50%, -50%);
+font-family: Georgia, 'Times New Roman', Times, serif;
+font-size: 15px;
+}
+.courtesy4List h2 {
+position: absolute;
+bottom: -10px;
+left: 50%;
+transform: translate(-50%, -50%);
+font-family: Georgia, 'Times New Roman', Times, serif;
+font-size: 15px;
+}
+.courtesy5List h2 {
+position: absolute;
+bottom: -10px;
+left: 50%;
+transform: translate(-50%, -50%);
+font-family: Georgia, 'Times New Roman', Times, serif;
+font-size: 15px;
+}
+.courtesy6List h2 {
+position: absolute;
+bottom: -10px;
+left: 50%;
+transform: translate(-50%, -50%);
+font-family: Georgia, 'Times New Roman', Times, serif;
+font-size: 15px;
+}
+.courtesyAll h2{
+text-align: center;
+font-family: 'Times New Roman', Times, serif;
+font-size: 15px;
+}
 .parentTicker {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 2em;
+display: flex;
+flex-direction: column;
+align-items: center;
+gap: 6.5em;
+}
+.ticker {
+display: flex;
+flex-wrap: wrap;
+width: 90%;
+height: 60px;
+margin: 50 auto;
+align-items: center;
+justify-content: center;
+}
+.featureTitle {
+width: 20%;
+text-align: center;
+color: azure;
+background: #c81c1c;
+position: relative;
+margin-left: 10px;
+margin-top: 15px;
+}
+.featureTitle:after {
+position: absolute;
+content: "";
+right: -29%;
+top: -1%;
+height: 16%;
+border-left: 20px solid #c81c1c;
+border-top: 33px solid transparent;
+border-right: 20px solid transparent;
+border-bottom: 33px solid transparent;
+}
+.featureTitle h3 {
+font-size: 24px;
+margin: 8% 0;
+}
+.featureHighlights marquee {
+font-size: 20px;
+} 
+.featureHighlights {
+margin-top: 15px;
+margin-right: 20px;
+width: 70%;
+height: 125%;
+font-family: "Poppins";
+font-size: 25px;
+color: yellow;
+background: red;
+padding-left: 4%;
+padding-right: 2%;
 }
 
-.ticker, .ticker2, .ticker3 {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  max-width: 800px;
-  margin: 0 auto;
+.ticker2 {
+display: flex;
+flex-wrap: wrap;
+width: 90%;
+height: 60px;
+margin: 50 auto;
+align-items: center;
+justify-content: center;
+}
+.featureTitle2 {
+width: 20%;
+text-align: center;
+color: azure;
+background: #c81c1c;
+position: relative;
+margin-left: 10px;
+margin-top: 15px;
+}
+.featureTitle2:after {
+position: absolute;
+content: "";
+right: -29%;
+top: -1%;
+height: 16%;
+border-left: 20px solid #c81c1c;
+border-top: 33px solid transparent;
+border-right: 20px solid transparent;
+border-bottom: 33px solid transparent;
+}
+.featureTitle2 h3 {
+font-size: 24px;
+margin: 8% 0;
+}
+.featureHighlights2 marquee {
+font-size: 20px;
+} 
+.featureHighlights2 {
+margin-top: 15px;
+margin-right: 20px;
+width: 70%;
+height: 125%;
+font-family: "Poppins";
+font-size: 25px;
+color: yellow;
+background: red;
+padding-left: 4%;
+padding-right: 2%;
 }
 
-.featureTitle, .featureTitle2, .featureTitle3 {
-  width: 100%;
-  text-align: center;
-  color: azure;
-  background: #c81c1c;
-  position: relative;
-  margin: 15px 0;
+.ticker3 {
+display: flex;
+flex-wrap: wrap;
+width: 90%;
+height: 60px;
+margin: 50 auto;
+align-items: center;
+justify-content: center;
+}
+.featureTitle3 {
+width: 20%;
+text-align: center;
+color: azure;
+background: #c81c1c;
+position: relative;
+margin-left: 10px;
+margin-top: 15px;
+}
+.featureTitle3:after {
+position: absolute;
+content: "";
+right: -29%;
+top: -1%;
+height: 16%;
+border-left: 20px solid #c81c1c;
+border-top: 33px solid transparent;
+border-right: 20px solid transparent;
+border-bottom: 33px solid transparent;
+}
+.featureTitle3 h3 {
+font-size: 24px;
+margin: 8% 0;
+}
+.featureHighlights3 marquee {
+font-size: 20px;
+} 
+.featureHighlights3 {
+margin-top: 15px;
+margin-right: 20px;
+width: 70%;
+height: 125%;
+font-family: "Poppins";
+font-size: 25px;
+color: yellow;
+background: red;
+padding-left: 4%;
+padding-right: 2%;
+}
+.headline h2{
+color: #000089;
 }
 
-.featureTitle:after, .featureTitle2:after, .featureTitle3:after {
-  position: absolute;
-  content: "";
-  right: -29%;
-  top: -1%;
-  height: 16%;
-  border-left: 20px solid #c81c1c;
-  border-top: 33px solid transparent;
-  border-right: 20px solid transparent;
-  border-bottom: 33px solid transparent;
-}
+@media screen and (max-width: 600px) {
 
-.featureTitle h3, .featureTitle2 h3, .featureTitle3 h3 {
-  font-size: 1.5em;
-  margin: 8% 0;
-}
-
-.featureHighlights, .featureHighlights2, .featureHighlights3 {
-  width: 100%;
-  max-width: 90%;
-  height: auto;
-  font-family: "Poppins";
-  font-size: 1.5em;
-  color: yellow;
-  background: red;
-  padding: 0 2%;
-  text-align: center;
-}
-
-/* Responsive Styles */
-@media (max-width: 768px) {
-  .header_home, .header_news {
-    margin-left: 10px;
-    font-size: 1em;
-  }
-
-  .contactLeftTitle {
-    font-size: 1.2em;
-  }
-
-  .contactInputs, .contactLeft textarea {
-    width: 100%;
-  }
-
-  .contactLeft button {
-    font-size: 14px;
-    padding: 10px 20px;
-  }
-
-  .about h1 {
-    font-size: 2em;
-  }
-
-  .about hr {
-    width: 150px;
-  }
-
-  .ticker, .ticker2, .ticker3 {
-    width: 100%;
-  }
-
-  .featureTitle, .featureTitle2, .featureTitle3 {
-    font-size: 1.2em;
-  }
-
-  .featureHighlights, .featureHighlights2, .featureHighlights3 {
-    font-size: 1.2em;
-    padding: 0 1%;
-  }
 }
