--- a/style.css
+++ b/style.css
@@ -2,53 +2,80 @@
 box-sizing: border-box;
 }
 body {
-background-color: rgb(252, 232, 198);;
+background-color: rgb(252, 232, 198);
+}
+.nav_header {
+background-color: rgb(255, 207, 120);
+font-family: "bahnschrift";
+padding-left: 15px;;
+padding-right: 15px;
+}
+.nav_div {
+display: flex;
+align-items: center;
+justify-content: space-between;
+}
+.nav_logo {
+display: flex;
+justify-content: start;
+}
+.nav_home {
+display: flex;
+flex-direction: column;
+justify-content: start;
+}
+.nav_news {
+display: flex;
+flex-direction: column;
+justify-content: start;
+}
+.nav_logo_text h1 {
+font-size: 35px;
+font-weight: 600;
+color: #000089;
+}
+li {
+list-style: none;
+display: inline-block;
+}
+li a {
+color: #000089;
+font-size: 18px;
+font-weight: bold;
+margin-right: 25px;
+}
+li img {
+margin-right: 25px;
 }
 .header {
 background-color: rgb(255, 207, 120);
 display: flex;
-justify-content: start;
+justify-content: space-around;
 }
+/* .header_title {
+display: flex;
+flex-direction: column;
+} */
 .header_home {
 align-self: center;
-margin-left: 75px;
+/* margin-left: 75px; */
 }
 .header_news {
 align-self: center;
-margin-left: 75px;
-}
-.hide_home {
-display: none;
-}
-.hide_news {
-display:none;
-}
-.header_home:hover + .hide_home {
-display: block;
-align-self: end;
-margin-left: -5%;
-margin-bottom: 1.3%;
-color: black;
-}
-.header_news:hover + .hide_news {
-display: block;
-align-self: end;
-margin-left: -5%;
-margin-bottom: 1.3%;
-color: black; 
+/* margin-left: 75px; */
 }
 .hLinkAbout {
-position:absolute;
+/* position:absolute; */
 align-self: center;
-margin-left: 80%;
+/* margin-left: 80%; */
 font-style: italic;
 font-size: larger;
 font-weight: bolder;
 }
 .hLinkWrite {
-position:absolute;
+/* position:absolute; */
 align-self: center;
-margin-left: 90%;
+/* margin-left: 90%; */
 font-style: italic;
 font-size: larger;
 font-weight: bolder;
@@ -273,7 +300,8 @@ display: flex;
 flex-direction: column;
 }
 .featureBlock {
-display: block;
+/* display: block; */
+display: flex;
 background: red;
 margin-top: 15px;
 }
